fix(reports): infinite loading indicator on heatmap reports after removing tenants (#8889)
relates to OPT-6968